# temper-git

./: .dockerignore  .gcloudignore  .gitignore  .gitmodules  APP.md  CLAUDE.md  CODING_GUIDELINES.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-APACHE-2.0  LICENSE-MIT  README.md  VISION.md  app.toml  genesis-goal-tracker.html  railway.toml
canonical/: Cargo.toml
canonical/src/: blob.rs  commit.rs  lib.rs  mode.rs  parse.rs  sha1.rs  tag.rs  tree.rs
canonical/tests/: git_parity.rs
deploy/: Dockerfile  cloudbuild.yaml
deploy/gke/base/: deployment.yaml  kustomization.yaml  namespace.yaml  pvc.yaml  service.yaml  serviceaccount.yaml
docs/adr/: 0001-temper-git-mission.md  0002-temper-native-scm.md  0002-temper-native-version-control.md  0003-byte-exact-git-compat.md  0004-per-repo-libsql-gcs.md  0004-registry-scope-absorption.md  0005-content-addressed-identity-and-owner-scoped-names.md  0006-metadata-only-fork-via-lineage.md  0007-content-addressed-dependency-closure.md  0008-commons-as-public-service-and-v1-cost-guardrails.md  README.md
docs/rfc/: 0001-architecture.md  0001-temper-git-v1-architecture.md  0002-factory-ready-git.md  0002-push-and-clone.md  0003-genesis-app-registry.md  README.md
policies/: app.cedar  closure.cedar  git_token.cedar  http_endpoint.cedar  lineage.cedar  objects.cedar  owner.cedar  pull_request.cedar  rate_limit.cedar  ref.cedar  repository.cedar  review.cedar  review_comment.cedar  wasm.cedar  webhook.cedar
policies/commons/: app.cedar  owner.cedar  ref.cedar  repository.cedar
registry/: Cargo.toml
registry/src/: lib.rs
registry/tests/: closure_id_cli.rs
scripts/: live-commons-tenant-mixed-stress-smoke.sh  live-genesis-install-e2e-smoke.sh  live-ingestpack-concurrency-smoke.sh  live-ingestpack-high-volume-smoke.sh  live-registry-composite-stress-smoke.sh  live-registry-cross-tenant-smoke.sh  live-registry-mixed-action-stress-smoke.sh
specs/: app.ioa.toml  app_installation.ioa.toml  blob.ioa.toml  closure.ioa.toml  commit.ioa.toml  git_token.ioa.toml  http_endpoint.ioa.toml  lineage.ioa.toml  model.csdl.xml  owner.ioa.toml  pull_request.ioa.toml  rate_limit.ioa.toml  ref.ioa.toml  repository.ioa.toml  review.ioa.toml  review_comment.ioa.toml  tag.ioa.toml  tree.ioa.toml  tree_entry.ioa.toml  webhook.ioa.toml
wasm-modules/app_registry/: Cargo.toml
wasm-modules/app_registry/src/: lib.rs
wasm-modules/git_receive_pack/: Cargo.toml
wasm-modules/git_receive_pack/src/: auth.rs  lib.rs
wasm-modules/git_upload_pack/: Cargo.toml
wasm-modules/git_upload_pack/src/: auth.rs  lib.rs
wasm-modules/scm_ingest_pack/: Cargo.toml
wasm-modules/scm_ingest_pack/src/: lib.rs
wasm/app_registry/: app_registry.wasm
wasm/git_receive_pack/: git_receive_pack.wasm
wasm/git_upload_pack/: git_upload_pack.wasm
wasm/scm_ingest_pack/: scm_ingest_pack.wasm
web/: package-lock.json  package.json  playwright.config.ts  svelte.config.js  vite.config.ts
web/src/: app.css
web/src/lib/: api.ts  types.ts
web/src/routes/: +page.svelte
web/tests/e2e/: genesis-registry.spec.ts
wire/: Cargo.toml
wire/src/: advertise.rs  capabilities.rs  commands.rs  lib.rs  pack.rs  pkt_line.rs  sideband.rs
wire/tests/: git_pack_parity.rs  git_parity.rs
