[package]
name = "tg-wire"
description = "Smart-HTTP git wire protocol — pkt-line framing + upload-pack/receive-pack handlers."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[dev-dependencies]
# None — parity tests shell out to the real `git` binary.
