[package]
name = "tg-wire"
description = "Smart-HTTP git wire protocol — pkt-line framing + upload-pack/receive-pack handlers."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
sha1 = "0.10"

[dev-dependencies]
# Parity tests shell out to the real `git` binary.
