[package]
name = "scm_ingest_pack"
description = "WASM integration: parse Repository.IngestPack params into composite sub-writes."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
temper-wasm-sdk = { workspace = true }
tg-canonical = { path = "../../canonical" }
tg-wire = { path = "../../wire" }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { version = "0.22", default-features = false, features = ["alloc"] }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true
